# prajwal1

./: README.md  pyproject.toml
cgpa_calculator/: cgpa.py  gui.py  test_cgpa.py  test_web.py  web.py
